--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
   "Md. Ibtehazul Haque", "Md. Jubayer Islam", "Md. Minhajur Rahman Riaj", "Md. Riaj Al Faruk",
   "Md. Sabbir", "Md. Sabbir Ahmed", "Mehedi Hasan", "MI Kabyo",
   "Miftahul Islam", "Miftahul Zannah", "Mike Snow", "Minhazul Arefin",
-  "Monayem Hossain", "Morshed Abid", "Mubtasim Zaman", "Muhammad Abiaz",
-  "Muhammad Tahmid", "Nafiza Nusrat Kakoli", "Nahal Taj", "Nakibul Haque Siam",
+  "Monayem Hossain", "Morshed Abid", "Mubtasim Zaman", 
+  "Muhammad Tahmid", "Nafiza Nusrat Kakoli", "MD.Nakibul Haque Siam",
   "Rafiul Islam", "Raihan Ridvi Efadh", "Raiyan Reza", "Ratul Islam",
-  "Reazul Islam Fahim", "Rehanul Islam Antu", "Riju Ahammed Sami", "RJ Anondo",
+  "Reazul Islam Fahim", "Rehanul Islam Antu", "Riju Ahammed Sami",
   "Rushad Anan", "Sadia Sultana", "Sadia Tasnim", "Safayet Ahmed Sakib",
   "Arman",                      
   "Sayontan Debnath Avro", "Sha Fim", "Shahriar Ahmed Naim",
